[metadata]
name = ZeroKnowledgeBattleship
version = 0.9.1
author = Gavin Pai
author_email = gavinpai@hotmail.com
description = Battleship with cryptographic protections and a zero-knowledge framework.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SteelShredder/CSRSEF
project_urls =
    Bug Tracker = https://github.com/SteelShredder/CSRSEF/issues
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: Microsoft :: Windows :: Windows 10
    Natural Language :: English
    Topic :: Security :: Cryptography

[options]
packages = find:
python_requires = >=3.9